# das-tern

./: .env.example  .gitignore  ALIGNMENT_SUMMARY.md  Cluade.md  ENDPOINT_ALIGNMENT.md  FIX_SUMMARY.md  LICENSE  MOBILE_BACKEND_ALIGNMENT.md  QUICK_START_MVP.md  README.md  REPORT.md  SERVICE_STARTUP_SUMMARY.md  TESTING_RESULTS.md  TEST_RESULTS.md  docker-compose.yml  error.backend.promt  start-backend.ps1  start-flutter.ps1  test-family-endpoints.sh  test.md  tmpclaude-1eae-cwd  tmpclaude-f893-cwd
ocr_service/: .gitignore  Makefile  README.md  implementation.plan.md  ocr_architecture_flow.puml  prompt.ocr.md  pyproject.toml  requirements-dev.txt  requirements.txt
ocr_service/app/: config.py  main.py
ocr_service/app/api/: models.py  routes.py
ocr_service/app/models/: dynamic_schema.py  static_schema.py
ocr_service/app/pipeline/: formatter.py  layout.py  ocr_engine.py  orchestrator.py  postprocessor.py  preprocessor.py
ocr_service/app/utils/: image_utils.py  med_lexicon.py  text_utils.py
ocr_service/data/lexicons/: column_headers.json  medications_en.txt  medications_km.txt
ocr_service/schemas/: dynamic_v2.schema.json  static_v1.schema.json
ocr_service/test_space/images_for_test/: .gitkeep
ocr_service/test_space/results/: FORMAT_COMPARISON.md  README.md  final.result.format.expected.json  prescription.dynamic.format.json  (+6 more)
ocr_service/tests/: conftest.py  test_dynamic_detection.py  test_pipeline_e2e.py  test_postprocessor.py  test_table_row_reconstructor.py
ocr_service/training_data/: FINE_TUNING_GUIDE.md  README.md  annotation_format.json
(+787 files in other folders)
